--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -13,6 +13,10 @@ header {
   display: flex;
   justify-content: space-between;
 }
+header h1 a { 
+  color: #fff; 
+  text-decoration: none; 
+}
 header h1 a:hover {
   text-decoration: underline;
 }
